@@ -45,6 +45,7 @@ endif::[]
 
 - Make Filters thread-safe {pull}624[#624]
 - Omit passwords in outgoing urls {pull}629[#629]
+- Add missing mutex to Counter metrics {pull}636[#636]
 
 [[release-notes-3.2.0]]
 ==== 3.2.0 (2019-11-19)
